fixed margins, line spacing, added basic font

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Nunito', sans-serif;
+}
+
 #header {
     display: flex;
     position: fixed;
@@ -25,8 +29,9 @@
 }
 
 .bodyText {
-  margin-left: 5vw;
-  margin-right: 5vw;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  line-height: 30px;
 }
 
 * {box-sizing: border-box}
